--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
     <nav>
       <div class="nav-wrapper">
         <a href="#" class="brand-logo center">Bridge</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="sass.html">Log In</a></li>
           <li><a href="badges.html">Register</a></li>
           <li><a href="collapsible.html">About</a></li>
         </ul>
-        <ul class="side-nav" id="mobile-demo">
+
+        <ul id="nav-mobile" class="side-nav">
           <li><a href="sass.html">Log In</a></li>
           <li><a href="badges.html">Register</a></li>
           <li><a href="collapsible.html">About</a></li>
         </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
   </div>
