--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
- <!DOCTYPE html>
- <html>
- <head>
-  <!--Import materialize.css-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="css/materialize.min.css">
-  <link rel="stylesheet" href="css/index.css">
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>Bridge</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="http://materializecss.com/dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+  <link href="css/index.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
 <body>
+
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
@@ -62,7 +64,9 @@
     </div>
   </div>
   <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="http://materializecss.com/bin/materialize.js"></script>
+  <script src="http://materializecss.com/templates/starter-template/js/init.js"></script>
+
 </body>
 </html>
