--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Bridge</a>
+        <a href="#" class="brand-logo center">bridge</a>
         <ul class="right hide-on-med-and-down">
           <li><a href="sass.html">Log In</a></li>
           <li><a href="badges.html">Register</a></li>
