--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col s12 m6">
+      <div class="col s12 m4">
         <div class="card">
           <div class="card-image">
             <img src="http://materializecss.com/images/sample-1.jpg">
@@ -47,7 +47,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6">
+      <div class="col s12 m4">
         <div class="card">
           <div class="card-image">
             <img src="http://materializecss.com/images/sample-1.jpg">
@@ -61,6 +61,49 @@
           </div>
         </div>
       </div>
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <img src="http://materializecss.com/images/sample-1.jpg">
+            <span class="card-title">Card Title</span>
+          </div>
+          <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+          <div class="card-action">
+            <a href="#">This is a link</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <img src="http://materializecss.com/images/sample-1.jpg">
+            <span class="card-title">Card Title</span>
+          </div>
+          <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+          <div class="card-action">
+            <a href="#">This is a link</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            <img src="http://materializecss.com/images/sample-1.jpg">
+            <span class="card-title">Card Title</span>
+          </div>
+          <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+          <div class="card-action">
+            <a href="#">This is a link</a>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </div>
   <!--Import jQuery before materialize.js-->
