--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col s12 m4">
+
+      <div class="input-field col s12">
+        <i class="material-icons prefix">search</i>
+        <input id="icon_prefix" type="text" class="validate">
+        <label for="icon_prefix">Search Events...</label>
+      </div>
+
+
+      <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
             <img src="http://materializecss.com/images/sample-1.jpg">
@@ -47,7 +55,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m4">
+      <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
             <img src="http://materializecss.com/images/sample-1.jpg">
@@ -61,7 +69,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m4">
+      <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
             <img src="http://materializecss.com/images/sample-1.jpg">
@@ -75,7 +83,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m4">
+      <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
             <img src="http://materializecss.com/images/sample-1.jpg">
@@ -89,7 +97,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m4">
+      <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
             <img src="http://materializecss.com/images/sample-1.jpg">
@@ -103,7 +111,7 @@
           </div>
         </div>
       </div>
-      
+
     </div>
   </div>
   <!--Import jQuery before materialize.js-->
