--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
       <div class="input-field col s12">
         <i class="material-icons prefix">search</i>
+        <input id="icon_prefix" type="text">
         <label for="icon_prefix">Search Events...</label>
       </div>
 
