--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
       <div class="nav-wrapper">
         <a href="#" class="brand-logo center">bridge</a>
-        <ul class="right hide-on-med-and-down">
+        <ul class="left hide-on-med-and-down">
           <li><a href="sass.html">Log In</a></li>
           <li><a href="badges.html">Register</a></li>
           <li><a href="collapsible.html">About</a></li>
