--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
+        <div class="input-field">
+          <i class="material-icons prefix">search</i>
+          <input id="icon_prefix" type="text" class="validate">
+          <label for="icon_prefix">Search Events...</label>
+        </div>
         <a href="#" class="brand-logo center">bridge</a>
         <ul class="left hide-on-med-and-down">
           <li><a href="sass.html">Log In</a></li>
