--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
         <ul class="left hide-on-med-and-down">
           <li><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li><a class="modal-trigger" href="#register_modal">Register</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
           <li><a class="modal-trigger" href="#login_modal">Log In</a></li>
@@ -141,6 +139,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="http://materializecss.com/bin/materialize.js"></script>
   <script src="http://materializecss.com/templates/starter-template/js/init.js"></script>
+  <script src="js/ui.js"></script>
 
 </body>
 </html>
