--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
           <li><a class="modal-trigger" href="#register_modal">Register</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
-          <li><a class="modal-trigger" href="#login_modal">Log In</a></li>
-          <li><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
+          <li><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li><a class="modal-trigger" href="#register_modal">Register</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
