--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="http://materializecss.com/bin/materialize.js"></script>
   <script src="http://materializecss.com/templates/starter-template/js/init.js"></script>
+  <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
   <script src="js/ui.js"></script>
 
 </body>
