--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
 
         <a href="#" class="brand-logo center">bridge</a>
         <ul class="right hide-on-med-and-down">
-          <li><a class="modal-trigger" href="#login_modal">Log In</a></li>
-          <li><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li class="l_i"><a class="modal-trigger" href="/profile">Profile</a></li>
+          <li class="l_i logout"><a class="modal-trigger" href="#register_modal">Log Out</a></li>
         </ul>
         <ul class="left hide-on-med-and-down">
           <li><a href="/about">About</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
-          <li><a class="modal-trigger l_o" href="#login_modal">Log In</a></li>
-          <li><a class="modal-trigger l_o" href="#register_modal">Register</a></li>
-          <li><a class="modal-trigger l_i" href="/profile">Profile</a></li>
-          <li><a class="modal-trigger l_i" id="logout" href="#register_modal">Log Out</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li class="l_i"><a class="modal-trigger" href="/profile">Profile</a></li>
+          <li class="l_i logout"><a class="modal-trigger" href="#register_modal">Log Out</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
