--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
         </div>
       </form>
     </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a id="login" href="#" class=" modal-action waves-effect waves-green btn">Log In</a>
+    </div>
   </div>
   <div class="container">
     <p></p>
