--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
           <li class="l_i"><a class="modal-trigger" href="/profile">Profile</a></li>
-          <li class="l_i logout"><a class="modal-trigger" href="#register_modal">Log Out</a></li>
+          <li class="l_i logout"><a class="modal-trigger" href="#">Log Out</a></li>
         </ul>
         <ul class="left hide-on-med-and-down">
           <li><a href="/about">About</a></li>
@@ -31,7 +31,7 @@
           <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
           <li class="l_i"><a class="modal-trigger" href="/profile">Profile</a></li>
-          <li class="l_i logout"><a class="modal-trigger" href="#register_modal">Log Out</a></li>
+          <li class="l_i logout"><a class="modal-trigger" href="#">Log Out</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
