--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="modal-content">
       <h4 >Register</h4>
       <p class="fb_title red-text">There was an error. Consider revising and try again.</p>
-      <a class="fb waves-effect waves-light btn-large"><i class="fa fa-facebook"></i>Log in with Facebook</a>
+      <a class="fb waves-effect waves-light blue darken-1"><i class="fa fa-facebook"></i> Log in with Facebook</a>
       <div class="divider"></div>
       <p id="regtitle" class="red-text">There was an error. Consider revising and try again.</p>
       
@@ -75,7 +75,7 @@
     <div class="modal-content">
       <h4>Log In</h4>
       <p class="fb_title red-text">There was an error. Consider revising and try again.</p>
-      <a class="fb waves-effect waves-light btn-large"><i class="fa fa-facebook"></i>Log in with Facebook</a>
+      <a class="fb waves-effect waves-light blue darken-1"><i class="fa fa-facebook"></i> Log in with Facebook</a>
       <div class="divider"></div>
       <p id="logtitle" class="red-text">There was an error. Consider revising and try again.</p>
       <form class="col s12">
