--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
   <div id="register_modal" class="modal">
     <div class="modal-content">
       <h4 >Register</h4>
+      <div class="divider"></div>
       <p class="fb_title red-text">There was an error. Consider revising and try again.</p>
-      <a class="fb waves-effect waves-light blue darken-1"><i class="fa fa-facebook"></i> Log in with Facebook</a>
+      <a class="fb waves-effect waves-light blue darken-1 btn"><i class="fa fa-facebook"></i> Log in with Facebook</a>
+      <br>
       <div class="divider"></div>
       <p id="regtitle" class="red-text">There was an error. Consider revising and try again.</p>
       
@@ -74,9 +76,10 @@
   <div id="login_modal" class="modal">
     <div class="modal-content">
       <h4>Log In</h4>
-      <p class="fb_title red-text">There was an error. Consider revising and try again.</p>
-      <a class="fb waves-effect waves-light blue darken-1"><i class="fa fa-facebook"></i> Log in with Facebook</a>
       <div class="divider"></div>
+      <p class="fb_title red-text">There was an error. Consider revising and try again.</p>
+      <a class="fb waves-effect waves-light blue darken-1 btn"><i class="fa fa-facebook"></i> Log in with Facebook</a>
+      <br>      <div class="divider"></div>
       <p id="logtitle" class="red-text">There was an error. Consider revising and try again.</p>
       <form class="col s12">
 
