--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     <div class="modal-content">
       <h4 >Register</h4>
       <div class="divider"></div>
+      <p></p>
       <p class="fb_title red-text">There was an error. Consider revising and try again.</p>
       <a class="fb waves-effect waves-light blue darken-1 btn"><i class="fa fa-facebook"></i> Log in with Facebook</a>
-      <br>
+      <p></p>
       <div class="divider"></div>
       <p id="regtitle" class="red-text">There was an error. Consider revising and try again.</p>
       
@@ -77,9 +78,11 @@
     <div class="modal-content">
       <h4>Log In</h4>
       <div class="divider"></div>
+      <p></p>
       <p class="fb_title red-text">There was an error. Consider revising and try again.</p>
       <a class="fb waves-effect waves-light blue darken-1 btn"><i class="fa fa-facebook"></i> Log in with Facebook</a>
-      <br>      <div class="divider"></div>
+      <p></p>  
+      <div class="divider"></div>
       <p id="logtitle" class="red-text">There was an error. Consider revising and try again.</p>
       <form class="col s12">
 
