--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
     </div>
   </div>
-  <a href="#0" class="cd-top">Top</a>
+  <a href="#0" class="cd-top"><i class="material-icons">search</i></a>
   <!--Import jQuery before materialize.js-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="http://materializecss.com/bin/materialize.js"></script>
