--- a/index.html
+++ b/index.html
@@ -46,67 +46,38 @@
       <h4 >Register</h4>
       <div class="divider"></div>
       <p></p>
-      <div class="row">
-        <div class="col s12">
-          <ul class="tabs">
-            <li class="tab col s3"><a class="active" href="#vol">Volunteer</a></li>
-            <li class="tab col s3"><a href="#org">Organization</a></li>
-          </ul>
-        </div>
-        <div id="vol" class="col s12">
-          <p class="fb_title red-text">There was an error. Consider revising and try again.</p>
-          <a class="fb waves-effect waves-light blue darken-1 btn"><i class="fa fa-facebook"></i> Log in with Facebook</a>
-          <p></p>
-          <div class="divider"></div>
-          <p id="regtitle" class="red-text">There was an error. Consider revising and try again.</p>
-          
-          <form class="col s12">
-            <div class="row">
-              <div class="input-field col s12">
-                <i class="material-icons prefix">email</i>
-                <input id="regemail" type="email" class="validate">
-                <label for="regemail" data-error="Invalid">Email</label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <i class="material-icons prefix">vpn_key</i>
-                <input id="regpass" type="password" class="validate">
-                <label for="regpass">Password</label>
-              </div>
-            </div>
-          </form> 
-          <a id="register" href="#" class=" modal-action waves-effect waves-green btn">Register</a>
-
-        </div>
-        <div id="org" class="col s12">
-          <p class="fb_title red-text">There was an error. Consider revising and try again.</p>
-          <a class="fb waves-effect waves-light blue darken-1 btn"><i class="fa fa-facebook"></i> Log in with Facebook</a>
-          <p></p>
-          <div class="divider"></div>
-          <p id="regtitle" class="red-text">There was an error. Consider revising and try again.</p>
-          
-          <form class="col s12">
-            <div class="row">
-              <div class="input-field col s12">
-                <i class="material-icons prefix">email</i>
-                <input id="regemail" type="email" class="validate">
-                <label for="regemail" data-error="Invalid">Email</label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <i class="material-icons prefix">vpn_key</i>
-                <input id="regpass" type="password" class="validate">
-                <label for="regpass">Password</label>
-              </div>
-            </div>
-          </form> 
-          <a id="register" href="#" class=" modal-action waves-effect waves-green btn">Register</a>
-
-        </div>
-
-      </div>
+<div class="row">
+                  <div class="col s12">
+                    <ul class="tabs">
+                      <li class="tab col s3"><a class="active" href="#test1"><i class="material-icons">shopping_cart</i></a></li>
+                      <li class="tab col s3"><a href="#test2"><i class="material-icons">supervisor_account</i></a></li>
+                      <li class="tab col s3"><a href="#test3"><i class="material-icons">settings</i></a></li>
+                    </ul>
+                  </div>
+                  <div id="test1" class="col s12">
+                    <ul class="collection">
+                      <li class="collection-item"><div>Milk<a href="#!" class="secondary-content"><i class="material-icons">done</i></a></div></li>
+                      <li class="collection-item"><div>Milk<a href="#!" class="secondary-content"><i class="material-icons">done</i></a></div></li>
+                      <li class="collection-item"><div>Milk<a href="#!" class="secondary-content"><i class="material-icons">done</i></a></div></li>
+                      <li class="collection-item"><div>Milk<a href="#!" class="secondary-content"><i class="material-icons">done</i></a></div></li>
+                    </ul>   
+                  </div>
+                  <div id="test2" class="col s12">
+                    <ul class="collection">
+                      <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">delete</i></a></div></li>
+                      <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">delete</i></a></div></li>
+                      <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">delete</i></a></div></li>
+                      <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">delete</i></a></div></li>
+                    </ul>                
+                  </div>
+                  <div id="test3" class="col s12">
+                    <div class="collection">
+                        <a href="#!" class="collection-item">Clear Cart</a>
+                        <a href="#!" class="collection-item">Change Name</a>
+                        <a href="#!" class="collection-item">Add Member</a>
+                        <a href="#!" class="collection-item">Leave Group</a>
+                    </div>                   
+                  </div>
 
     </div>
     <div class="modal-footer">
