--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h4 >Register</h4>
       <div class="divider"></div>
       <p></p>
-<div class="row">
+      <div class="row">
                   <div class="col s12">
                     <ul class="tabs">
                       <li class="tab col s3"><a class="active" href="#test1"><i class="material-icons">shopping_cart</i></a></li>
@@ -78,7 +78,7 @@
                         <a href="#!" class="collection-item">Leave Group</a>
                     </div>                   
                   </div>
-
+      </div>
     </div>
     <div class="modal-footer">
       <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
