--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="navbar-fixed">
-    <ul id="dropdown1" class="dropdown-content">
+    <ul id="regmenu" class="dropdown-content">
           <li><a class="modal-trigger" href="#org_modal">Volunteer</a></li>
           <li><a class="modal-trigger" href="#vol_modal">Organization</a></li>
 
@@ -25,7 +25,7 @@
         <a href="#" class="brand-logo center">bridge</a>
         <ul class="right hide-on-med-and-down">
           <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
-          <li class="l_o"><a class="dropdown-button" href="#!" data-activates="dropdown1">Register<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li class="l_o"><a class="dropdown-button" href="#!" data-activates="regmenu">Register<i class="material-icons right">arrow_drop_down</i></a></li>
           <li class="l_i"><a class="modal-trigger" href="/profile">Profile</a></li>
           <li class="l_i logout"><a class="modal-trigger" href="#">Log Out</a></li>
         </ul>
