--- a/verify/index.html
+++ b/verify/index.html
@@ -34,15 +34,15 @@
     <p></p>
     <form>
     <p>
-      <input name="group1" type="radio" id="test1" />
+      <input name="group1" type="radio" value="Volunteer" id="test1" checked="true" />
       <label for="test1">Volunteer</label>
     </p>
     <p>
-      <input name="group1" type="radio" id="test2" />
+      <input name="group1" type="radio" value="Organization" id="test2" />
       <label for="test2">Organization</label>
     </p>
 
-    <a class="waves-effect waves-light btn"><i class="material-icons left">submit</i> Submit</a>
+    <a id="submit"class="waves-effect waves-light btn"><i class="material-icons left">submit</i> Submit</a>
 
     </form>
   </div>
@@ -51,6 +51,7 @@
   <script src="http://materializecss.com/bin/materialize.js"></script>
   <script src="http://materializecss.com/templates/starter-template/js/init.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
+  <script src="verify.js"></script>
 
 </body>
 </html>
