--- a/verify/index.html
+++ b/verify/index.html
@@ -42,7 +42,7 @@
       <label for="test2">Organization</label>
     </p>
 
-    <a id="submit"class="waves-effect waves-light btn disabled"><i class="fa fa-submit"></i> Submit</a>
+    <a id="submit"class="waves-effect waves-light btn disabled"> Submit</a>
 
     </form>
   </div>
