--- a/profile/index.html
+++ b/profile/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Bridge | Verify</title>
+  <title>Bridge | Profile</title>
   <link rel="shortcut icon" href="../img/logo.png"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="http://materializecss.com/dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -18,11 +17,20 @@
       <div class="nav-wrapper">
 
         <a href="#" class="brand-logo center">bridge</a>
+        <ul class="right hide-on-med-and-down">
+          <li class="l_i"><a href="/post">Post</a></li>
+          <li class="l_i active"><a href="/profile">Profile</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+        </ul>
         <ul class="left hide-on-med-and-down">
           <li><a href="/about">About</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
+          <li class="l_i"><a href="/post">Post</a></li>
+          <li class="l_i active"><a href="/profile">Profile</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+          <li class="divider"></li>
           <li><a href="/about">About</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
@@ -31,27 +39,14 @@
     </nav>
   </div>
   <div class="container">
-    <p></p>
-    <form>
-    <p>
-      <input name="group1" type="radio" value="Volunteer" id="test1" checked="true" />
-      <label for="test1">Volunteer</label>
-    </p>
-    <p>
-      <input name="group1" type="radio" value="Organization" id="test2" />
-      <label for="test2">Organization</label>
-    </p>
-
-    <a id="submit"class="waves-effect waves-light btn disabled"> Submit</a>
-
-    </form>
+      Profile
   </div>
   <!--Import jQuery before materialize.js-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="http://materializecss.com/bin/materialize.js"></script>
   <script src="http://materializecss.com/templates/starter-template/js/init.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
-  <script src="verify.js"></script>
+  <script src="profile.js"></script>
 
 </body>
 </html>
