--- a/contact/index.html
+++ b/contact/index.html
@@ -20,23 +20,23 @@
         <ul class="right hide-on-med-and-down">
           <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
-          <li class="l_i"><a href="/post">Post</a></li>
-          <li class="l_i"><a href="/profile">Profile</a></li>
+          <li class="l_i"><a href="post">Post</a></li>
+          <li class="l_i"><a href="profile">Profile</a></li>
           <li class="l_i logout"><a href="#">Log Out</a></li>
         </ul>
         <ul class="left hide-on-med-and-down">
-          <li><a href="/about">About</a></li>
-          <li class="active"><a href="/contact">Contact</a></li>
+          <li><a href="about">About</a></li>
+          <li class="active"><a href="contact">Contact</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
           <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
-          <li class="l_i"><a href="/post">Post</a></li>
-          <li class="l_i"><a href="/profile">Profile</a></li>
+          <li class="l_i"><a href="post">Post</a></li>
+          <li class="l_i"><a href="profile">Profile</a></li>
           <li class="l_i logout"><a href="#">Log Out</a></li>
           <li class="divider"></li>
-          <li><a href="/about">About</a></li>
-          <li class="active"><a href="/contact">Contact</a></li>
+          <li><a href="about">About</a></li>
+          <li class="active"><a href="contact">Contact</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
