--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 
         <a href="#" class="brand-logo center">bridge</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="/">Home</a></li>
+          <li><a href="../">Home</a></li>
           <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
           <li class="l_i"><a href="../post">Post</a></li>
@@ -29,7 +29,7 @@
           <li><a href="../contact">Contact</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="/">Home</a></li>
+          <li><a href="../">Home</a></li>
           <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
           <li class="l_i"><a href="../post">Post</a></li>
