--- a/profile/index.html
+++ b/profile/index.html
@@ -18,7 +18,7 @@
 
         <a href="#" class="brand-logo center">bridge</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="/">Home</a></li>
+          <li><a href="../">Home</a></li>
           <li class="l_i"><a href="../post">Post</a></li>
           <li class="l_i logout"><a href="#">Log Out</a></li>
         </ul>
@@ -27,7 +27,7 @@
           <li><a href="../contact">Contact</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="/">Home</a></li>
+          <li><a href="../">Home</a></li>
           <li class="l_i"><a href="../post">Post</a></li>
           <li class="l_i logout"><a href="#">Log Out</a></li>
           <li class="divider"></li>
