--- a/profile/index.html
+++ b/profile/index.html
@@ -39,7 +39,17 @@
     </nav>
   </div>
   <div class="container">
-      Profile
+    <ul class="collection">
+      <li class="collection-item avatar">
+        <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
+        <span id="name"class="title"></span>
+        <b id="type"></b> <br>
+        <p id="email">
+        </p>
+      </li>
+
+    </ul>
+            
   </div>
   <!--Import jQuery before materialize.js-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
