--- a/profile/index.html
+++ b/profile/index.html
@@ -42,7 +42,7 @@
     <ul class="collection">
       <li class="collection-item avatar">
         <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
-        <span id="name"class="title"></span>
+        <span id="name"class="title"></span><br>
         <b id="type"></b> <br>
         <p id="email">
         </p>
