--- a/profile/index.html
+++ b/profile/index.html
@@ -39,16 +39,26 @@
     </nav>
   </div>
   <div class="container">
-    <ul class="collection">
-      <li class="collection-item avatar">
-        <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
-        <span id="name"class="title"></span><br>
-        <b id="type"></b> <br>
-        <p id="email">
-        </p>
-      </li>
-
-    </ul>
+  <h1 id="type"></h1> <br>
+  <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
+   <div class="row">
+      <form class="col s12">
+        <div class="row">
+          <div class="input-field col s6">
+            <i class="material-icons prefix">account_circle</i>
+            <input id="name" type="text" class="validate">
+            <label for="name">Name</label>
+          </div>
+          <div class="input-field col s6">
+            <i class="material-icons prefix">email</i>
+            <input id="email" type="email" class="validate">
+            <label for="email">Email</label>
+          </div>
+        </div>
+        <a id="save" href="#" class="waves-effect waves-green btn">Save</a>
+      </form>
+    </div>
+      
             
   </div>
   <!--Import jQuery before materialize.js-->
