--- a/profile/index.html
+++ b/profile/index.html
@@ -47,12 +47,12 @@
           <div class="input-field col s6">
             <i class="material-icons prefix">account_circle</i>
             <input id="name" type="text" class="validate">
-            <label for="name">Name</label>
+            <label class="active" for="name">Name</label>
           </div>
           <div class="input-field col s6">
             <i class="material-icons prefix">email</i>
             <input id="email" type="email" class="validate">
-            <label for="email">Email</label>
+            <label class="active" for="email">Email</label>
           </div>
         </div>
         <a id="save" href="#" class="waves-effect waves-green btn">Save</a>
