--- a/profile/index.html
+++ b/profile/index.html
@@ -38,12 +38,29 @@
       </div>
     </nav>
   </div>
-  <div class="container">
-  <h1 id="type"></h1> <br>
-  <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
+  <nav>
+    <div class="nav-wrapper">
+      <a id="type"href="#" class="brand-logo center"></a> 
+    </div>
+  </nav>
+  
    <div class="row">
       <form class="col s12">
         <div class="row">
+          <div class="input-field col s6">
+            <div class="avatar">
+              <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
+            </div>
+          </div>
+          <div class="input-field col s6">
+            <div class="file-field input-field">
+              <input class="file-path validate" type="text"/>
+              <div class="btn">
+                <span>File</span>
+                <input type="file" />
+              </div>
+            </div>   
+          </div>     
           <div class="input-field col s6">
             <i class="material-icons prefix">account_circle</i>
             <input id="name" type="text" class="validate">
