--- a/profile/index.html
+++ b/profile/index.html
@@ -48,20 +48,24 @@
      <div class="row">
         <form class="col s12">
           <div class="row">
-            <div class="input-field col s6">
+            <div class="col s12">
+              <ul class="collection">
+                <li class="collection-item avatar">
+                  <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
+                  <div class="file-field input-field">
+                    <input class="file-path validate" type="text"/>
+                    <div class="btn">
+                      <span>File</span>
+                      <input type="file" />
+                    </div>
+                  </div>   
+                  <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                </li>
+              </ul>
               <div class="avatar">
-                <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
+                
               </div>
-            </div>
-            <div class="input-field col s6">
-              <div class="file-field input-field">
-                <input class="file-path validate" type="text"/>
-                <div class="btn">
-                  <span>File</span>
-                  <input type="file" />
-                </div>
-              </div>   
-            </div>     
+            </div>    
             <div class="input-field col s6">
               <i class="material-icons prefix">account_circle</i>
               <input id="name" type="text" class="validate">
