--- a/profile/index.html
+++ b/profile/index.html
@@ -56,7 +56,7 @@
                 <li class="collection-item avatar">
                   <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
                   <div class="file-field input-field">
-                    <input class="file-path validate" type="text"/>
+                    <input placeholder="Change Picture" class="file-path validate" type="text"/>
                     <div class="btn">
                       <span>File</span>
                       <input type="file" />
@@ -64,9 +64,6 @@
                   </div>   
                 </li>
               </ul>
-              <div class="avatar">
-                
-              </div>
             </div>    
             <div class="input-field col s6">
               <i class="material-icons prefix">account_circle</i>
