--- a/profile/index.html
+++ b/profile/index.html
@@ -44,14 +44,14 @@
      <div class="row">
         <form class="col s12">
           <div class="row">
-            <div class="col s6">
+            <div class="col s12 m6">
               <nav>
                 <div class="nav-wrapper">
                   <a id="type"href="#" class="brand-logo center"></a> 
                 </div>
               </nav>
             </div>
-            <div class="col s6">
+            <div class="input-field col s12 m6">
               <ul class="collection">
                 <li class="collection-item avatar">
                   <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
@@ -65,12 +65,12 @@
                 </li>
               </ul>
             </div>    
-            <div class="input-field col s6">
+            <div class="input-field col s12 m6">
               <i class="material-icons prefix">account_circle</i>
               <input id="name" type="text" class="validate">
               <label class="active" for="name">Name</label>
             </div>
-            <div class="input-field col s6">
+            <div class="input-field col s12 m6">
               <i class="material-icons prefix">email</i>
               <input id="email" type="email" class="validate">
               <label class="active" for="email">Email</label>
