--- a/profile/index.html
+++ b/profile/index.html
@@ -44,8 +44,8 @@
      <div class="row">
         <form class="col s12">
           <div class="row">
-            <div class="col s12 m6">
-              <nav>
+            <div class="small_nav_wrapper col s12 m6">
+              <nav class="small_nav">
                 <div class="nav-wrapper">
                   <a id="type"href="#" class="brand-logo center"></a> 
                 </div>
