--- a/profile/index.html
+++ b/profile/index.html
@@ -58,8 +58,8 @@
                   <div class="file-field input-field">
                     <input placeholder="Change Picture" class="file-path validate" type="text"/>
                     <div class="btn">
-                      <span>File</span>
-                      <input type="file" />
+                      <span>Image</span>
+                      <input type="file" accept="image/*" capture="camera"/>
                     </div>
                   </div>   
                 </li>
