--- a/profile/index.html
+++ b/profile/index.html
@@ -57,7 +57,8 @@
                   <img id="image" src="http://keshav55.github.io/linknet/img/user.png" alt="" class="circle">
                   <div class="file-field input-field">
                     <input placeholder="Change Picture" class="file-path validate" type="text"/>
-                    <div class="btn">
+                    <div style="opacity:0;"class="btn">
+                      <span>Image</span>
                       <input type="file" accept="image/*" capture="camera"/>
                     </div>
                   </div>   
