--- a/profile/index.html
+++ b/profile/index.html
@@ -59,7 +59,7 @@
                     <input placeholder="Change Picture" class="file-path validate" type="text"/>
                     <div style="opacity:0;"class="btn">
                       <span>Image</span>
-                      <input type="file" accept="image/*" capture="camera"/>
+                      <input id="imgInp" type="file" accept="image/*" capture="camera"/>
                     </div>
                   </div>   
                 </li>
