--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href="css/index.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
+<noscript>
+    <meta http-equiv="refresh" content="0; url=http://keshav55.github.io/linknet/nojs" />
+</noscript>
 <body>
 
   <div class="navbar-fixed">
