--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li><a href="about">About</a></li>
           <li><a href="contact">Contact</a></li>
         </ul>
-        <ul id="nav-mobile" class="side-nav">
+        <ul id="nav-mobile" class="side-nav hide-on-large-only">
           <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
           <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
           <li class="l_i"><a href="post">Post</a></li>
