--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <noscript>
     <meta http-equiv="refresh" content="0; url=http://keshav55.github.io/linknet/nojs" />
 </noscript>
-<body ng-app="tutorialWebApp">
+<body ng-app="bridge">
     <div ng-view></div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
